src/ApiGateways/Envoy/config/lexonapi/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: elef_backend_route
            virtual_hosts:
            - name: elef_backend
              domains:
              - "*"
              routes:
              - name: "l-short"
                match:
                  prefix: "/l/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/lexon-api/"
                  cluster: lexon
              - name: "l-long"
                match:
                  prefix: "/lexon-api/"
                route:
                  auto_host_rewrite: true
                  cluster: lexon
              - name: "h-long"
                match:
                  prefix: "/hub/notificationhub"
                route:
                  auto_host_rewrite: true
                  cluster: signalr-hub
                  timeout: 300s
              - name: "y-short"
                match:
                  prefix: "/y/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/lexonmysql-api/"
                  cluster: basket
              - name: "y-long"
                match:
                  prefix: "/lexonmysql-api/"
                route:
                  auto_host_rewrite: true
                  cluster: lexonmysql
              - name: "agg"
                match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: lexonagg
          http_filters:
          - name: envoy.router
          access_log:
          - name: envoy.file_access_log
            filter:
              not_health_check_filter: {}
            config:
              json_format:
                time: "%START_TIME%"
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"
                request_host: "%REQ(HOST)%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                response_flags: "%RESPONSE_FLAGS%"
                route_name: "%ROUTE_NAME%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
              path: "/tmp/access.log"
  clusters:
  - name: lexonagg
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: weblexonagg
        port_value: 80
  - name: lexon
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: lexon-api
        port_value: 80
  - name: lexonmysql
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: lexonmysql-api
        port_value: 80
  - name: signalr-hub
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: lexon-signalrhub
        port_value: 80
